--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <p style="color: antiquewhite;">Made with ❤️ by Tanmay Agrawal</p>
+  <p style="color: antiquewhite;">Made with ❤️ by Deep Patel</p>
   <h1 id="level-titlee">Press A Key to Start</h1>
   <div class="containerr">
     <div class="roww">
